Prevent slideshow from looking horrible on small screens

--- a/css/app.css
+++ b/css/app.css
@@ -9,12 +9,13 @@ html {
 article{
 	margin-bottom: 1.5em;
 }
-.jumbotron{
-    margin-bottom: 0;
-}
 iframe {
 	display: block;
 	margin: 0 auto !important;
+	max-width: 100%;
+}
+.jumbotron{
+    margin-bottom: 0;
 }
 #copyright{
 	padding-top: 0.8em;
